--- a/advice-generator-app-main/scss/style.scss
+++ b/advice-generator-app-main/scss/style.scss
@@ -98,18 +98,18 @@ table {
         display: flex;
         margin-top: 2rem;
         position: relative;
+        z-index: 1;
         &::after , ::before{
-            position: relative;
-            display: flex;
+            position: absolute;
+            top: 0;left: 0;
             width: 5rem;
             height: 2px;
             background-color: hsl(193, 38%, 86%);
-            content: '';
+            content:'';
             z-index: 1000;
         }
     }
     &__btn{
-       
         width: 6rem;
         height: 6rem;
         display: flex;
@@ -118,6 +118,9 @@ table {
         background-color: hsl(150, 100%, 66%);
         border-radius: 50%;
        transform: translateY(50%);
+       &:hover{
+        box-shadow: 0 0 20px hsl(150, 100%, 66%);
+       }
        
     }
 
