--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,12 @@ table {
   display: flex;
   margin-top: 2rem;
   position: relative;
+  z-index: 1;
 }
 .advice-box__img::after, .advice-box__img ::before {
-  position: relative;
-  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 5rem;
   height: 2px;
   background-color: hsl(193, 38%, 86%);
@@ -118,6 +120,9 @@ table {
   background-color: hsl(150, 100%, 66%);
   border-radius: 50%;
   transform: translateY(50%);
+}
+.advice-box__btn:hover {
+  box-shadow: 0 0 20px hsl(150, 100%, 66%);
 }
 
 @media only screen and (min-width: 992px) {
